--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 02 Feb 2021 12:59:30 GMT
+// Generated on Fri, 05 Feb 2021 11:12:27 GMT
 
 $light-color-scheme-primary-default: #338FCC;
 $light-color-scheme-second-default: #B3B3B3;
@@ -202,11 +202,13 @@ $alert-dark-color-scheme-info-icon: #57A4D7;
 $alert-dark-color-scheme-default-background: #4D4D4D;
 $alert-dark-color-scheme-default-border: #4D4D4D;
 $alert-dark-color-scheme-default-icon: #999999;
-$alert-size-padding: 13px 15px;
-$alert-size-padding-small: 11px 15px;
-$alert-size-right-padding-dismissible: 15px;
 $alert-size-border-width: 1px;
 $alert-size-border-radius: 4px;
+$alert-size-horizontal-padding: 16px;
+$alert-size-vertical-padding: 13px;
+$alert-size-icon-margin: 8px;
+$alert-size-close-button-width: 16px;
+$alert-size-small-vertical-padding: 11px;
 $alert-font-default-header: subheading;
 $alert-font-default-body: body;
 $alert-font-small-header: caption;
@@ -260,16 +262,15 @@ $button-dark-color-scheme-error-color: #E76E5C;
 $button-dark-color-scheme-error-icon: #E76E5C;
 $button-dark-color-scheme-error-states-active-border: darken(#808080, 5);
 $button-dark-color-scheme-error-states-active-background: darken(#666666, 5);
-$button-size-padding: 5px 15px;
 $button-size-border-width: 1px;
 $button-size-border-radius: 3px;
+$button-size-vertical-padding: 6px;
+$button-size-horizontal-padding: 16px;
 $button-font-default: body;
 $button-font-primary: body-strong;
-$icon-button-size-border-width: 1px;
-$icon-button-size-border-radius: 3px;
-$icon-button-size-padding: 5px 7px;
-$icon-button-size-text-padding: 5px 7px;
-$icon-button-size-icon-padding: 5px 15px;
+$icon-button-size-vertical-padding: 6px;
+$icon-button-size-horizontal-padding: 8px;
+$icon-button-size-icon-horizontal-padding: 16px;
 $card-light-color-scheme-error-vertical-line: #E76E5C;
 $card-light-color-scheme-error-background: #FCEFEC;
 $card-light-color-scheme-error-shadow: #E6E6E6;
@@ -306,7 +307,7 @@ $checkbox-dark-color-scheme-states-checked-background: #206EA2;
 $checkbox-dark-color-scheme-states-focused-border: #57A4D7;
 $checkbox-dark-color-scheme-states-focused-shadow: inset 0 0 0 1px #333333, 0 0 0 1px #57A4D7;
 $checkbox-size-width: 16px;
-$checkbox-size-padding: 24px;
+$checkbox-size-label-margin: 8px;
 $checkbox-size-border-width: 1px;
 $checkbox-size-toggle-box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.2);
 $checkbox-font-default: body;
@@ -370,8 +371,9 @@ $link-dark-color-scheme-dashed-border-bottom: rgba(#338FCC, 0.5);
 $link-dark-color-scheme-dashed-state-hover-border-bottom: rgba(#7FBAE1, 0.5);
 $link-dark-color-scheme-underlined-border-bottom: rgba(#338FCC, 0.32);
 $link-dark-color-scheme-underlined-state-hover-border-bottom: rgba(#7FBAE1, 0.32);
+$link-size-icon-margin: 4px;
 $link-font-default: body;
-$list-size-horizontal-padding: 15px;
+$list-size-horizontal-padding: 16px;
 $list-size-icon-padding: 4px;
 $list-size-item-height: 28px;
 $list-size-two-line-height: 72px;
@@ -395,7 +397,7 @@ $modal-body-size-max-height: calc(100vh - 260px);
 $modal-body-size-padding: 16px 24px 24px;
 $modal-body-font-default: body;
 $modal-footer-size-border-radius: 0 0 4px 4px;
-$modal-footer-size-padding: 16px;
+$modal-footer-size-padding: 16px 16px;
 $modal-confirm-size-padding: 24px;
 $navbar-light-color-scheme-background: #114E77;
 $navbar-light-color-scheme-text: #D8EAF7;
@@ -404,7 +406,7 @@ $navbar-dark-color-scheme-background: #114E77;
 $navbar-dark-color-scheme-text: #D8EAF7;
 $navbar-dark-color-scheme-opacity: 0.5;
 $navbar-size-height: 48px;
-$navbar-size-icon-margin-left: 8px;
+$navbar-size-icon-margin: 8px;
 $navbar-font-title: body;
 $navbar-item-light-color-scheme-text: #D8EAF7;
 $navbar-item-light-color-scheme-states-active: lighten(#206EA2, 5%);
@@ -470,11 +472,12 @@ $radio-dark-color-scheme-states-focused-outer-circle-border: #57A4D7;
 $radio-dark-color-scheme-states-focused-outer-circle-shadow: 0 0 0 2px #57A4D7;
 $radio-dark-color-scheme-states-focused-inner-circle-shadow: 0 0 0 1px #333333;
 $radio-size-size: 14px;
-$radio-size-padding: 24px; // Padding between radio inputs and their labels
+$radio-size-label-margin: 8px;
 $radio-font-default: body;
 $select-size-height: 30px;
-$select-size-padding: 0 7px 0 15px;
-$select-size-padding-left-multiple: 7px;
+$select-size-left-padding: 16px;
+$select-size-right-padding: 8px;
+$select-size-left-padding-multiple: 8px;
 $select-font-default: body;
 $select-panel-size-max-height: 232px;
 $select-panel-size-max-width: 640px;
@@ -552,7 +555,7 @@ $tags-size-height: 24px;
 $tags-size-border-width: 1px;
 $tags-size-border-radius: 4px;
 $tags-size-icon-padding: 3px;
-$tags-size-text-margin: 7px;
+$tags-size-text-margin: 8px;
 $tags-font-default: caption;
 $tags-font-mono: caption-mono;
 $tags-font-caps: caption-caps;
