--- a/packages/mosaic/tree-select/tree-select.scss
+++ b/packages/mosaic/tree-select/tree-select.scss
@@ -34,10 +34,20 @@
 
     cursor: pointer;
 
-    padding: var(--mc-select-size-padding, $select-size-padding);
+    padding-left: calc(
+        var(--mc-select-size-left-padding, #{$select-size-left-padding}) -
+        var(--mc-form-field-size-border-width, #{$form-field-size-border-width})
+    );
+    padding-right: calc(
+        var(--mc-select-size-right-padding, #{$select-size-right-padding}) -
+        var(--mc-form-field-size-border-width, #{$form-field-size-border-width})
+    );
 
     &.mc-tree-select__trigger_multiple {
-        padding-left: var(--mc-select-size-padding, $select-size-padding)-left-multiple;
+        padding-left: calc(
+            var(--mc-select-size-left-padding-multiple, #{$select-size-left-padding-multiple}) -
+            var(--mc-form-field-size-border-width, #{$form-field-size-border-width})
+        );
 
         & .mc-tree-select__placeholder {
             margin-left: 8px;
